[project]
name = "deepfold3"
version = "0.1.0"
description = "DeepFold 3: Biomolecular Complex Structure Prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "gemmi>=0.7.4",
    "numpy>=2.4.2",
    "pdbeccdutils>=1.0.0",
    "rdkit>=2025.9.4",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "safetensors>=0.5.2",
    "zstandard>=0.25.0",
]

[project.scripts]
# deepfold3 = "deepfold3.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["deepfold3"]

[dependency-groups]
dev = ["pytest>=9.0.0", "ruff>=0.9.4"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "dist",
    "build",
    "docs",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = ["E501"] # line too long, handled by ruff format

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
